--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,20 @@
 stages:
-  - deploy
+  - pages
 
 pages:
-  stage: deploy
+  stage: pages
   image: ghcr.io/quarto-dev/quarto-full:latest
+  # Functions that should be executed before the build script is run
+  before_script:
+    - tlmgr update --self
   script:
+    - tlmgr install beamer caption soul # Optional: For building presentations
     - quarto render . --output-dir public
   artifacts:
     paths:
+      # The folder that contains the files to be exposed at the Page URL
       - public
-  only:
-    - main  # Change to your default branch if it's not "main"
+  rules:
+    # This ensures that only pushes to the default branch will trigger
+    # a pages deploy
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
