--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,9 @@ pages:
   image: ghcr.io/quarto-dev/quarto-full:latest
   # Functions that should be executed before the build script is run
   before_script:
-    - tlmgr update --self
-    - tlmgr install beamer caption soul # Install missing LaTeX packages
+    - tlmgr option repository http://mirror.ctan.org/systems/texlive/tlnet
+    - tlmgr update --self --verify-repo=none
+    - tlmgr install beamer caption soul koma-script --verify-repo=none
   script:
     - quarto render . --output-dir public
   artifacts:
