--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,7 @@ website:
       - section: "Project Documentation"
         contents:
          - docs/technical_functional_design/main.qmd
+         - docs/non_technical_requirements/main.qmd
 
 format:
   html:
