--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - airflow_data:/opt/airflow
+      - airflow_data:/opt/airflow/dags
     command: webserver
 
   airflow-scheduler:
@@ -47,7 +47,7 @@ services:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
     volumes:
-      - airflow_data:/opt/airflow
+      - airflow_data:/opt/airflow/dags
     command: scheduler
 
   airflow-init:
