--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Data
-/data/
+# /data/
 
 # Mac OS-specific storage files
 .DS_Store
@@ -174,3 +174,4 @@ cython_debug/
 /.quarto/
 _site/
 
+/data
