--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,6 @@
 [core]
     remote = minio
+    autostage = true
 ['remote "minio"']
     url = s3://labeled-house-images
     endpointurl = http://localhost:9000/
