--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.4
+apache-airflow==2.7.2
 attrs==25.1.0
 babel==2.17.0
 beautifulsoup4==4.13.3
@@ -22,12 +23,12 @@ cookiecutter==2.6.0
 cookiecutter-data-science==2.0.0
 cycler==0.12.1
 debugpy==1.8.12
-decorator==5.1.1
+decorator==4.0.2
 defusedxml==0.7.1
 distlib==0.3.9
 executing==2.2.0
 fastjsonschema==2.21.1
-filelock==3.17.0
+filelock==3.12.2
 fonttools==4.55.8
 fqdn==1.5.1
 fsspec==2025.2.0
@@ -66,6 +67,7 @@ matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.1
+minio==7.2.3
 mpmath==1.3.0
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -76,8 +78,9 @@ networkx==3.4.2
 nodeenv==1.9.1
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy==2.2.2
+numpy==2.1.0
 opencv-python==4.11.0.86
+opencv-python-headless==4.8.1.78
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -89,7 +92,7 @@ platformdirs==4.3.6
 pre_commit==4.1.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
-psutil==6.1.1
+psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
@@ -129,6 +132,7 @@ traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.1
+ultralytics==8.1.32
 uri-template==1.3.0
 urllib3==2.3.0
 virtualenv==20.29.1
