--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ apache-airflow==2.7.2
 minio==7.2.3
 opencv-python-headless==4.8.1.78
 ultralytics==8.1.32
-torch==2.1.2
-torchvision==0.16.2
+torch==2.2.0
+torchvision==0.17.0
+sqlalchemy<2.0
+psycopg2-binary==2.9.9
