--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ pages:
   image: ghcr.io/quarto-dev/quarto-full:latest
   # Functions that should be executed before the build script is run
   before_script:
-    - tlmgr option repository http://mirror.ctan.org/systems/texlive/tlnet
+    - tlmgr option repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
     - tlmgr update --self --verify-repo=none
     - tlmgr install beamer caption soul koma-script --verify-repo=none
   script:
@@ -15,4 +15,3 @@ pages:
     paths:
       # The folder that contains the files to be exposed at the Page URL
       - public
-
