--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -1,6 +1,6 @@
 apache-airflow==2.7.3
 minio==7.2.3
-opencv-python-headless==4.8.1.78
+opencv-python
 ultralytics==8.1.32
 torch==2.2.0
 torchvision==0.17.0
