--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,7 @@ services:
       - "8080:8080"
     command: >
       bash -c "airflow db init && 
-      pip install minio && pip install opencv-python-headless && pip install ultralytics &&
+      pip install minio && pip install opencv-python && pip install ultralytics &&
       airflow db upgrade &&
       airflow connections create-default-connections && 
       airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com && 
@@ -112,7 +112,7 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
     volumes:
       - ./airflow/dags:/opt/airflow/dags
-    command: bash -c "airflow db init && pip install minio && airflow scheduler && pip install opencv-python-headless && pip install ultralytics"
+    command: bash -c "airflow db init && pip install minio && airflow scheduler && pip install opencv-python && pip install ultralytics"
   airflow-init:
     image: apache/airflow:2.7.3
     depends_on:
