Add Airflow and Docker configurations, including OpenCV support and model training scripts

--- a/config.env
+++ b/config.env
@@ -9,14 +9,15 @@ MLFLOW_PORT=5000
 MLFLOW_BUCKET_NAME=mlflow
 
 # MinIO access keys - these are needed by MLflow
-MINIO_ACCESS_KEY=1QjlHwW6DvESYnVt3txn
-MINIO_SECRET_ACCESS_KEY=BwRwdxTsCVENaBY0uQwxFpXnmJoQJbYSUZoRPARD
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_ACCESS_KEY=minioadmin
 
 # MinIO configuration
-MINIO_ROOT_USER: 'minio_user'
-MINIO_ROOT_PASSWORD: 'minio_pwd'
-MINIO_ADDRESS: ':9000'
-MINIO_STORAGE_USE_HTTPS: False
-MINIO_CONSOLE_ADDRESS: ':9001'
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
 MINIO_PORT=9000
 MINIO_CONSOLE_PORT=9001
+
+# Airflow configuration
+AIRFLOW_USERNAME=admin
+AIRFLOW_PASSWORD=admin
