--- a/mlflow/Dockerfile
+++ b/mlflow/Dockerfile
@@ -1,7 +1,23 @@
 FROM python:3.10-slim
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    gcc \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update && apt-get install -y curl
-RUN pip install mlflow[extras] psycopg2-binary boto3 cryptography pymysql
+# Install Python packages with retry logic
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir wheel setuptools && \
+    for i in {1..3}; do \
+        pip install --no-cache-dir mlflow[extras]==2.8.1 psycopg2-binary==2.9.9 boto3==1.34.63 cryptography==42.0.5 pymysql==1.1.0 && break || \
+        if [ $i -lt 3 ]; then \
+            echo "Attempt $i failed, retrying..." && \
+            sleep 5; \
+        else \
+            echo "All attempts failed" && exit 1; \
+        fi \
+    done
 
 EXPOSE 5000
