--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
       POSTGRES_DB: airflow
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
+      - ./postgres-init:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s
@@ -104,6 +105,8 @@ services:
     restart: always
     networks:
       - backend
+    ports:
+      - "${PG_PORT:-5432}:5432"
 
   redis:
     # Redis is limited to 7.2-bookworm due to licencing change
@@ -290,25 +293,6 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
-  db:
-    restart: always
-    image: postgres:15
-    container_name: mlflow_db
-    expose:
-      - "${PG_PORT}"
-    networks:
-      - backend
-    environment:
-      - POSTGRES_USER=${PG_USER}
-      - POSTGRES_PASSWORD=${PG_PASSWORD}
-      - POSTGRES_DATABASE=${PG_DATABASE}
-    volumes:
-      - ./db_data:/var/lib/postgresql/data/
-    healthcheck:
-      test: ["CMD", "pg_isready", "-p", "${PG_PORT}", "-U", "${PG_USER}"]
-      interval: 5s
-      timeout: 5s
-      retries: 3
   s3:
     restart: always
     image: minio/minio
@@ -337,7 +321,7 @@ services:
     image: mlflow_server
     container_name: mlflow_server
     depends_on:
-      - db
+      - postgres
     ports:
       - "${MLFLOW_PORT}:5000"
     networks:
@@ -350,7 +334,7 @@ services:
       - MLFLOW_S3_IGNORE_TLS=true
     command: >
       mlflow server
-      --backend-store-uri postgresql://${PG_USER}:${PG_PASSWORD}@db:${PG_PORT}/${PG_DATABASE}
+      --backend-store-uri postgresql://${PG_USER}:${PG_PASSWORD}@postgres:5432/${PG_DATABASE}
       --host 0.0.0.0
       --serve-artifacts
       --artifacts-destination mlflow_minio://${MLFLOW_BUCKET_NAME}
@@ -378,9 +362,27 @@ services:
       timeout: 10s
       retries: 3
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL:-admin@admin.com}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD:-admin}
+      - PGADMIN_CONFIG_SERVER_MODE=False
+      - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=False
+    volumes:
+      - ./pgadmin-data:/var/lib/pgadmin
+    networks:
+      - frontend
+      - backend
+    depends_on:
+      - postgres
+
 volumes:
   postgres-db-volume:
-  db_data:
   minio_data:
   portainer_data:
 
