--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,13 @@ test:
   image: python:${PYTHON_VERSION}
   before_script:
     - pip install -r requirements.txt
-    - pip install pytest flake8
+    - pip install pytest flake8 pytest-junit
     - python --version
   script:
     - echo "Running flake8 code quality checks..."
     - flake8 src/ --max-line-length=120
     - echo "Running pytest unit tests..."
-    - python -m pytest src/ -v
+    - python -m pytest src/ -v --junitxml=test-results.xml
   artifacts:
     when: always
     reports:
