Refactor .gitlab-ci.yml to improve test setup by clarifying echo commands for creating a basic test file and checking for JUnit XML output. This enhances readability and maintains the flow of the CI/CD pipeline.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,12 +25,12 @@ test:
     - echo "Running flake8 code quality checks..."
     - flake8 src/ --max-line-length=120 || echo "Flake8 found issues but continuing"
     - echo "Running pytest unit tests..."
-    # Create a basic test file
+    - echo "Creating a basic test file"
     - mkdir -p src/tests
-    - echo 'def test_basic(): assert True' > src/tests/test_basic.py
-    # Run pytest with JUnit XML output
+    - "echo 'def test_basic(): assert True' > src/tests/test_basic.py"
+    - echo "Running pytest with JUnit XML output"
     - python -m pytest src/ -v --junitxml=test-results/junit.xml || echo "Tests failed but continuing"
-    # Create a basic XML file if pytest didn't create one
+    - echo "Checking for XML file"
     - |
       if [ ! -f "test-results/junit.xml" ]; then
         echo "Creating dummy junit.xml file"
