--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,19 +43,14 @@ build:
   services:
     - docker:20.10.16-dind
   variables:
-    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ""
+    IMAGE_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
   before_script:
-    - apk add --no-cache docker-compose
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - echo "Building Docker image ${IMAGE_NAME}..."
-    - docker-compose -f docker-compose.build.yml build
-    - docker tag solar-panel-detection:latest $IMAGE_NAME
-    - echo "Pushing Docker image to registry..."
-    - docker push $IMAGE_NAME
-  only:
-    - main
-    - tags
+    - docker-compose -f docker-compose.build.yml up
+  after_script:
+    - docker logout $CI_REGISTRY
 
 # Deploy to staging environment
 deploy_staging:
