Refactor project structure and update configurations for MLflow integration, including new database initialization scripts, updated paths in data.yaml, and adjustments to .gitignore. Remove deprecated files and enhance documentation for training and inference processes.

--- a/.gitignore
+++ b/.gitignore
@@ -179,8 +179,8 @@ src/mnistdata/
 logs/
 pgadmin-data/
 airflow_logs.txt
-traintest/labels/
-traintest/SateliteData/
+src/traintest/labels/
+src/traintest/SateliteData/
 mlruns/
 mlflow.db
 solar_panel_detection/yolo_run_*
