--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,19 +1,25 @@
-# Use the official Airflow image with Python 3.7
-FROM apache/airflow:2.7.3-python3.7
+FROM apache/airflow:2.10.50-python3.8
 
-# Switch to root user to install system dependencies
+
 USER root
 
-# Install system dependencies
+# Install system dependencies if needed
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+    build-essential \
     libgl1-mesa-glx \
-    libglib2.0-0 \
-    libsm6 \
-    libxext6 \
-    libxrender-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+
+
+# Install specific Python packages directly
+RUN pip install --no-cache-dir \
+    minio \
+    opencv-python \
+    ultralytics \
+    sqlalchemy \
+    psycopg2-binary
 
 # Copy startup script
 COPY start-airflow.sh /opt/airflow/start-airflow.sh
@@ -21,12 +27,9 @@ RUN chmod +x /opt/airflow/start-airflow.sh
 
 # Switch back to airflow user
 USER airflow
-
-# Install Python dependencies
-RUN pip install --no-cache-dir \
-    minio==7.2.3 \
-    opencv-python==4.11.0.86 \
-    ultralytics==8.1.32
+# If you have additional requirements in a file, uncomment the following:
+# COPY requirements.txt /tmp/requirements.txt
+# RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
 # Set the default entrypoint to run Airflow
 ENTRYPOINT ["/opt/airflow/start-airflow.sh"]
