--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ x-airflow-common:
     - ./airflow/config:/opt/airflow/config
     - ./airflow/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0"
-  networks:
+  networks: 
     - frontend
     - backend
   depends_on:
@@ -54,7 +54,7 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
-      - ./postgres-init:/docker-entrypoint-initdb.d  # Add this line
+      - ./postgres-init:/docker-entrypoint-initdb.d  
 
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "postgres"]
@@ -240,7 +240,7 @@ services:
     depends_on:
       - postgres
     ports:
-      - "${MLFLOW_PORT}:5000"
+      - "5001:5000"
     networks:
       - frontend
       - backend
