--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 minio>=7.2.0
 opencv-python>=4.6.0
-ultralytics>=8.0.0
+# Replace ultralytics with CPU-only version
+ultralytics>=8.0.0,<9.0.0
+# Add specific torch CPU version to ensure no CUDA dependencies
+torch>=2.0.0,<3.0.0 --index-url https://download.pytorch.org/whl/cpu
+torchvision>=0.15.0,<1.0.0 --index-url https://download.pytorch.org/whl/cpu
 sqlalchemy>=1.4.0
 psycopg2-binary>=2.9.0
 mlflow>=2.10.0
